# nexus-agent

./: .dockerignore  .env.template  .gitattributes  .gitignore  README.md  REQUIREMENTS.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  startup.py
.github/: labeler.yml  pre-action.yml
.github/workflows/: deployment.yml  pre-action.yml
PM/: 01. Summary.md  02. Plan.md
api/: models.py  routes.py  server.py
app/graph/nodes/: __init__.py  base.py  community_searcher.py  generator.py  llm.py  news_searcher.py  report_assistant.py  supervisor.py  websearch.py
app/models/: graph.py
app/services/: repository.py
app/utils/: logger.py  tools.py
images/api-server/: Dockerfile
nexus_agent/graph/: builder.py
nexus_agent/graph/nodes/: __init__.py  base.py  community_searcher.py  generator.py  google_finance_searcher.py  google_finance_searcher.py.bak  llm.py  naver_news_searcher.py  news_searcher.py  report_assistant.py  rss_feeder.py  supervisor.py  websearch.py  yahoo_finance_searcher.py
nexus_agent/models/: graph.py
nexus_agent/services/: backend.py
nexus_agent/tools/naver/: __init__.py  naver_search.py  tool.py
nexus_agent/tools/rss/: rss_feeder.py  tool.py
nexus_agent/utils/: logger.py  logo.py
pipelines/: agent_pipeline.py  agent_pipeline_example.py  supervisor_pipeline.py
