[project]
name = "nexus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
    "tavily-python>=0.5.1",
]
