[project]
name = "nexus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.11",
    "feedparser>=6.0.11",
    "goose3>=3.1.19",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-naver-community>=0.1.1",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "lxml-html-clean>=0.4.1",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.9",
    "tavily-python>=0.5.1",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
